# EVESVGRenderer

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  run.sh
datadump/: dump.sql  run.sh  transform.sql
evesvgrenderer/: render.py
evesvgrenderer/queries/: __init__.py
